myteo/test/parser/ast/string_literal/invalid_dollar_escape_error.exp
Error: Invalid escape sequence. Expected `"`, `\`, `n`, `t`, `r`, or `x`.
test/parser/ast/string_literal/invalid_dollar_escape_error.myte:4:7
 4 |   "foo\$bar";
   |        ^